finish making it a package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = ai-scholar-toolbox
+name = ai_scholar_toolbox
 version = 0.0.1
 author = Jiarui Liu
-author_email = jiaruiliu999@gmail.com
+author_email = ljrjerry@umich.edu
 description = Find Google Scholar Profiles
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/JerrySummerResearch/ai-scholar-toolbox
+url = https://github.com/causalNLP/ai-scholar-toolbox
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -14,5 +14,5 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.7, <3.8
 include_package_data = True
