modify LICENSE and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,10 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.7, <3.8
-include_package_data = True
+include_package_data = False
+include_requires =
+    bs4 ==0.0.1
+    selenium ==4.3.0
+    requests
+    pandas
+    numpy
